# invoicer

./: README.md  cargo.toml
clinv/: .gitignore  Cargo.toml  README.md  template.html
clinv/src/: cli.rs  main.rs  utils.rs
clinv/tests/: cli.rs  commands.rs  database.rs  models.rs
inv-tools/: Cargo.toml  README.md
inv-tools/src/: args.rs  commands.rs  database.rs  error.rs  exec.rs  lib.rs  models.rs  utils.rs
sainv/: package-lock.json  package.json
sainv/src/: App.css  App.tsx
sainv/src-tauri/: Cargo.toml  clinv.db  tauri.conf.json
sainv/src-tauri/src/: main.rs
sainv/src/components/Button/: Button.css  Button.tsx
sainv/src/components/ClientCard/: ClientCard.css  ClientCard.tsx
sainv/src/components/Input/: Input.css  Input.tsx
sainv/src/components/Modal/: Modal.css  Modal.tsx
sainv/src/components/Search/: Search.css  Search.tsx
sainv/src/components/Tab/: Tab.css  Tab.tsx
sainv/src/pages/Clients/: Clients.css  Clients.tsx
sainv/src/styles/: palette.css
sainv/src/types/: models.ts
