[package]
name = "clinv"
edition = "2021"
version = "0.1.0"
authors = ["Caleb Walker <calebw4110@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to create invoices and generate pdf's from the command line"
readme = "README.md"
homepage = "https://github.com/Caleb4110/clinv"
repository = "https://github.com/Caleb4110/clinv"
keywords = ["cli", "invoice", "pdf"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
email_address = "0.2.9"
phonenumber = "0.3.7"
inv_tools = { path = "../inv-tools" }
rusqlite = "0.36.0"

[lib]
name = "clinv"
path = "src/lib.rs"
